[package]
name = "pikemon_client"
version = "0.0.0"
authors = ["Michael Chesser"]

[dependencies.network_common]
path = "../network_common"

[dependencies.interface]
path = "../interface"

[dependencies.gb_emu]
git = "https://github.com/quvarxa/gb_emu.git"

[dependencies]
rustc-serialize = "0.3"
clock_ticks = "0.1"
sdl2 = "0.27"
