[package]
name = "pikemon_client"
version = "0.0.1"
authors = ["Michael Chesser"]
edition = "2021"

[dependencies]
gb_emu = { git = "https://github.com/mchesser/gb_emu" }
interface = { path = "../interface" }
network_common = { path = "../network_common" }
crossbeam-channel = "0.5.6"
serde_json = "1.0.85"
macroquad = { version = "0.3.24", default-features = false }
